# damc_stm32f723disco

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  LICENSE  README.md  STM32F723.svd  STM32F723IEKX_FLASH.ld  STM32F723IEKX_RAM.ld  TODO  damc_stm32f723disco Debug.launch  damc_stm32f723disco.ioc  damc_stm32f723disco.launch  dev-requirements.txt  stm32f7xx_hal_pcd.c.patch  trace.txt  trace2.txt  usb_audio_loopback_stm32f723disco Release.launch  usb_audio_loopback_stm32f723disco.ioc
memtester/: tests.c  (+2 more)
src/: .clang-format  .clangd  .cproject  .mxproject  CMakeLists.txt  STM32F723IEKX_FLASH.ld  damc_stm32f723disco Debug.launch  damc_stm32f723disco.ioc  damc_stm32f723disco.launch
src/BSP/: stm32f723e_discovery.c  stm32f723e_discovery_audio.c  stm32f723e_discovery_audio.h  stm32f723e_discovery_lcd.h  stm32f723e_discovery_psram.c  stm32f723e_discovery_ts.c  stm32f723e_discovery_ts.h
src/Components/st7789h2/: st7789h2.c
src/Components/wm8994/: wm8994.h
src/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
src/Core/Src/: init.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
src/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_pcd.h
src/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_pcd.c  stm32f7xx_ll_usb.c
src/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/: usbd_audio.h
src/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/: usbd_audio.c
src/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
src/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c  usbd_cdc_if.c
src/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_def.h
src/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
src/USBClass/AUDIO/Src/: usbd_audio.c
src/USBClass/CDC/Src/: usbd_cdc_if.c
src/USB_DEVICE/App/: usb_device.c  usbd_desc.c
src/cmake/: gcc-arm-none-eabi.cmake  st-project.cmake  toolchain_common.cmake  toolchain_stm32f7.cmake  toolchain_stm32f723disco.cmake  toolchain_stm32n6.cmake  toolchain_stm32n6570-dk.cmake
src/damc/: .clang-format
src/damc/damc_audio_processing/: CompressorFilter.cpp  CompressorFilter.h  DelayFilter.cpp  DelayFilter.h  DitheringFilter.cpp  DitheringFilter.h  EqFilter.h  ExpanderFilter.cpp  ExpanderFilter.h  PeakMeter.cpp  PeakMeter.h  ResamplingFilter.h  ResamplingFilter_coefs.cpp  ReverbFilter.h
src/damc/damc_common/: BiquadFilter.cpp  BiquadFilter.h  CMakeLists.txt  MathUtils.h  OscRoot.cpp  Utils.h  tinyosc.c
src/damc/damc_common/Osc/: OscContainer.h  OscDynamicFlatArray.h  OscDynamicVariable.cpp  OscDynamicVariable.h  OscNode.h  OscReadOnlyVariable.cpp  OscVariable.h
src/damc/damc_simple_lib/: AudioCApi.cpp  AudioCApi.h  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  CPUFrequencyScaling.cpp  CPUFrequencyScaling.h  ChannelStrip.cpp  ChannelStrip.h  CircularBuffer.cpp  CircularBuffer.h  CodecAudio.cpp  CodecAudio.h  CodecDamcHATInit.cpp  CodecDamcHATInit.h  CodecSTM32F723EDiscoInit.cpp  CodecSTM32F723EDiscoInit.h  Controls.cpp  GlitchDetection.cpp  GlitchDetection.h  LCDController.cpp  LCDController.h  LCDDrawUtils.cpp  LCDDrawUtils.h  OscSerialClient.h  OscStatePersist.cpp  OscStatePersist.h  TimeMeasure.cpp  TimeMeasure.h  Tracing.cpp  Tracing.h  USBAudioBuffers.cpp  USBAudioBuffers.h
src/damc/damc_simple_lib/Fonts/: fonts.h
src/memtester/: sizes.h  tests.c
src/stm32f723disco/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F723IEKX_FLASH.ld
src/stm32f723disco/BSP/: stm32f723e_discovery.h  stm32f723e_discovery_audio.h  stm32f723e_discovery_lcd.c  stm32f723e_discovery_lcd.h
src/stm32f723disco/Components/Common/: audio.h
src/stm32f723disco/Core/Inc/: stm32f7xx_hal_conf.h
src/stm32f723disco/Core/Src/: main.c  new.h
src/stm32f723disco/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_pcd.c  stm32f7xx_hal_pcd_ex.c  stm32f7xx_ll_usb.c
src/stm32f723disco/Middlewares/ST/STM32_USB_Device_Library/Class/: unused-folder
src/stm32f723disco/USB_DEVICE/App/: usbd_audio_if.c  usbd_audio_if.h  usbd_desc.h
src/stm32n6570-dk/: .mxproject  .project  CMakeLists.txt  stm32n6570-dk.ioc
src/stm32n6570-dk/BSP/: stm32f723e_discovery_audio.c
src/stm32n6570-dk/Core/Src/: stm32f7xx_hal_msp.c
src/stm32n6570-dk/Drivers/STM32N6xx_HAL_Driver/Inc/: stm32n6xx_hal_pcd.h
src/stm32n6570-dk/Drivers/STM32N6xx_HAL_Driver/Src/: stm32n6xx_hal_dma_ex.c  stm32n6xx_hal_pcd.c
src/stm32n6570-dk/FSBL/: .cproject  .project  STM32N657X0HXQ_AXISRAM2_fsbl.ld  stm32n6570-dk_FSBL Debug.launch  stm32n6570-dk_FSBL Release.launch
src/stm32n6570-dk/FSBL/BSP/: Release_Notes.html  isp_conf.h  isp_param_conf.h  stm32n6570_discovery.c  stm32n6570_discovery.h  stm32n6570_discovery_audio.c  stm32n6570_discovery_audio.h  stm32n6570_discovery_bus.c  stm32n6570_discovery_bus.h  stm32n6570_discovery_camera.c  stm32n6570_discovery_camera.h  stm32n6570_discovery_conf.h  stm32n6570_discovery_errno.h  stm32n6570_discovery_lcd.c  stm32n6570_discovery_lcd.h  stm32n6570_discovery_sd.c  stm32n6570_discovery_sd.h  stm32n6570_discovery_ts.c  stm32n6570_discovery_ts.h  stm32n6570_discovery_usbpd_pwr.c  stm32n6570_discovery_usbpd_pwr.h  stm32n6570_discovery_xspi.c  stm32n6570_discovery_xspi.h  stm32n6570_errno.h
src/stm32n6570-dk/FSBL/Components/aps256xx/: aps256xx_conf.h
src/stm32n6570-dk/FSBL/Components/imx335/: Release_Notes.html  imx335.c  imx335.h  imx335_reg.c  imx335_reg.h
src/stm32n6570-dk/FSBL/Components/mx25um51245g/: mx25um51245g_conf.h
src/stm32n6570-dk/FSBL/Components/mx66uw1g45g/: mx66uw1g45g_conf.h
src/stm32n6570-dk/FSBL/Components/rk050hr18/: Release_Notes.html  rk050hr18.h
src/stm32n6570-dk/FSBL/Components/rtl8211/: Release_Notes.html  rtl8211.c
src/stm32n6570-dk/FSBL/Components/wm8904/: Release_Notes.html  wm8904.c  wm8904.h  wm8904_reg.c  wm8904_reg.h
src/stm32n6570-dk/FSBL/Core/Inc/: main.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
src/stm32n6570-dk/FSBL/Core/Src/: main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  sysmem.c
src/stm32n6570-dk/FSBL/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_desc.c  usbd_desc.h
(+135 files in other folders)
